--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="css/style.css">
     </head>    
     <body>
-        
+        <div class="background-light">
+        </div>
     </body>
 </html>
