--- a/index.html
+++ b/index.html
@@ -5,7 +5,24 @@
         <link rel="stylesheet" href="css/style.css">
     </head>    
     <body>
-        <div class="background-light">
+        <header class="main-header">
+            <span> </span>
+            <h1> Terapeutica de las Enfermedades Espirituales </h1>
+            <img class ="arrow" src= "img/arrow.svg" alt="Down arrow">
+        </header>
+
+        <div class="primary-content">
+            <div class="background-light">
+                Testing the background light div.
+            </div>
+            <div>
+                Normal background
+            </div>
         </div>
+
+        <footer class="main-footer">
+            <p></p>    
+        </footer>
     </body>
 </html>
+ 
