Set basic layout

--- a/index.html
+++ b/index.html
@@ -1,28 +1,50 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>¡Levántate, que tu alma viva!</title>
-        <link rel="stylesheet" href="css/style.css">
-    </head>    
-    <body>
-        <header class="main-header">
-            <span> </span>
-            <h1> Terapeutica de las Enfermedades Espirituales </h1>
-            <img class ="arrow" src= "img/arrow.svg" alt="Down arrow">
-        </header>
+  <meta charset="UTF-8">
+  <head>
+    <title>¡Levántate, que tu alma viva!</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
+  </head>    
+  <body>
+    <header class="main-header">
+        <span> </span>
+        <h1> Terapéutica de las Enfermedades Espirituales </h1>
+        <img class ="arrow" src= "img/arrow.svg" alt="Down arrow">
+    </header>
+    <div class="main-content">
+      <div class="container intro">
+            Es un fin de semana en el que juntos reflexionamos más a fondo sobre las enfermedades espirituales como gula, lujuria, tristeza, avaricia, orgullo... y la terapéutica o remedios que señalan los Padres de la Iglesia apuntando a Cristo como el Médico. 
+      </div>
+      <div class="background-light">
+        <div class="container group">
+          <div class="author">
+            <img src="img\juan-crisostomo.jpg" alt="Juan Crisóstomo">
+          </div>
+          <div class="quote">
+            La Iglesia es "como un laboratorio espiritual, donde se preparan los medicamentos a fin de que encontremos con qué sanar las heridas que nos ha hecho el mundo"
+            <div class="quote-by"> San Juan Crisóstomo 
+              <div class="more-info"> siglo IV, Obispo de Constantinopla<br>
+              Padre y Doctor de la Iglesia
+              </div>
+            </div>            
+          </div>
 
-        <div class="primary-content">
-            <div class="background-light">
-                Testing the background light div.
-            </div>
-            <div>
-                Normal background
-            </div>
         </div>
-
-        <footer class="main-footer">
-            <p></p>    
-        </footer>
-    </body>
+      </div>
+      <div class="container">
+          <div class="title"> ¿A quién va dirigido?</div>
+            A todas las personas mayores de 18 años que les interese reflexionar sobre la salud interior. Han ido también adolescentes acompañados de sus padres. Los jóvenes a partir de 13 años son bienvenidos, sólo es necesario que vayan acompañados de algún familiar adulto, de preferencia sus padres.
+      </div>
+      <div class="background-light">
+        <div class="container">
+            "Si para algunos, la oración en soledad es ardua, la belleza de una oración cantada en común, incluso entre dos o tres, es un incomparable apoyo de la vida interior."
+        </div>
+      </div>
+    </div>
+    <footer class="main-footer">
+      <p></p>    
+    </footer>
+  </body>
 </html>
  
