--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
           <div class="quote">
             La Iglesia es "como un laboratorio espiritual, donde se preparan los medicamentos a fin de que encontremos con qué sanar las heridas que nos ha hecho el mundo"
             <div class="quote-by"> San Juan Crisóstomo 
-              <div class="more-info"> siglo IV, Obispo de Constantinopla<br>
-              Padre y Doctor de la Iglesia
+              <div class="more-info"> 
+                  <p>siglo IV, Obispo de Constantinopla</p>
+                  <p>Padre y Doctor de la Iglesia</p>
               </div>
             </div>            
           </div>
