--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>¡Levántate, que tu alma viva!</title>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
+    <!--meta name="viewport" content="width=device-width"-->
   </head>    
   <body>
     <header class="main-header">
