Fixing quote author layout

--- a/index.html
+++ b/index.html
@@ -15,32 +15,28 @@
     </header>
     <div class="main-content">
       <div class="container intro">
-            Es un fin de semana en el que juntos reflexionamos más a fondo sobre las enfermedades espirituales como gula, lujuria, tristeza, avaricia, orgullo... y la terapéutica o remedios que señalan los Padres de la Iglesia apuntando a Cristo como el Médico. 
+          Es un fin de semana en el que juntos reflexionamos más a fondo sobre las enfermedades espirituales como gula, lujuria, tristeza, avaricia, orgullo... y la terapéutica o remedios que señalan los Padres de la Iglesia apuntando a Cristo como el Médico. 
+      </div>
+      <div class="container">
+          <div class="title">¿A quién va dirigido?</div>
+          <p>A todas las personas mayores de 18 años que les interese reflexionar sobre la salud interior. Han ido también adolescentes acompañados de sus padres. Los jóvenes a partir de 13 años son bienvenidos, sólo es necesario que vayan acompañados de algún familiar adulto, de preferencia sus padres.</p>
       </div>
       <div class="background-light">
-        <div class="container group">
-          <div class="author">
-            <img src="img\juan-crisostomo.jpg" alt="Juan Crisóstomo">
-          </div>
+        <div class="container">
           <div class="quote">
-            La Iglesia es "como un laboratorio espiritual, donde se preparan los medicamentos a fin de que encontremos con qué sanar las heridas que nos ha hecho el mundo"
-            <div class="quote-by"> San Juan Crisóstomo 
-              <div class="more-info"> 
-                  <p>siglo IV, Obispo de Constantinopla</p>
-                  <p>Padre y Doctor de la Iglesia</p>
-              </div>
-            </div>            
+            <p> La Iglesia es "como un laboratorio espiritual, donde se preparan los medicamentos a fin de que encontremos con qué sanar las heridas que nos ha hecho el mundo"</p>
+            <div class="author">
+              <img src="img\juan-crisostomo.jpg" alt="Juan Crisóstomo">
+              <p>San Juan Crisóstomo</p>
+              <p class="more-info">siglo IV, Obispo de Constantinopla</p>
+            </div>  
           </div>
 
         </div>
       </div>
-      <div class="container">
-          <div class="title"> ¿A quién va dirigido?</div>
-            A todas las personas mayores de 18 años que les interese reflexionar sobre la salud interior. Han ido también adolescentes acompañados de sus padres. Los jóvenes a partir de 13 años son bienvenidos, sólo es necesario que vayan acompañados de algún familiar adulto, de preferencia sus padres.
-      </div>
-      <div class="background-light">
+      <div class="prayer-background">
         <div class="container">
-            "Si para algunos, la oración en soledad es ardua, la belleza de una oración cantada en común, incluso entre dos o tres, es un incomparable apoyo de la vida interior."
+            "Si para algunos, la oración en soledad es ardua, la belleza de una oración cantada en común, incluso entre dos o tres, es un incomparable apoyo de la vida interior. A través de palabras sencillas, cantos largamente repetidos, puede irradiar un gozo."
         </div>
       </div>
     </div>
