Adding program section

--- a/index.html
+++ b/index.html
@@ -31,8 +31,11 @@
               <p class="more-info">siglo IV, Obispo de Constantinopla</p>
             </div>  
           </div>
-
         </div>
+      </div>
+      <div class="container">
+          <div class="title">Programa</div>
+          <p></p>
       </div>
       <div class="prayer-background">
         <div class="container">
