fixes in the prayer section

--- a/index.html
+++ b/index.html
@@ -37,11 +37,13 @@
           <div class="title">Programa</div>
           <p></p>
       </div>
+      <!-- photo credit: https://flic.kr/p/h31Zwg -->
       <div class="prayer-background">
-        <div class="container">
-            "Si para algunos, la oración en soledad es ardua, la belleza de una oración cantada en común, incluso entre dos o tres, es un incomparable apoyo de la vida interior. A través de palabras sencillas, cantos largamente repetidos, puede irradiar un gozo."
-        </div>
       </div>
+      <div class="container">
+            <p class="prayer">"Si para algunos, la oración en soledad es ardua, la belleza de una oración cantada en común, incluso entre dos o tres, es un incomparable apoyo de la vida interior. A través de palabras sencillas, cantos largamente repetidos, puede irradiar un gozo."</p>
+            <p class="prayer-by">fr. Roger de Taizé</p>
+        </div>
     </div>
     <footer class="main-footer">
       <p></p>    
