--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <meta charset="UTF-8">
   <head>
     <title>¡Levántate, que tu alma viva!</title>
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
     <!--meta name="viewport" content="width=device-width"-->
