social media footer

--- a/index.html
+++ b/index.html
@@ -47,6 +47,12 @@
         </div>
     </div>
     <footer class="main-footer">
+      <a class="link-social" href="https://twitter.com/quetualmaviva">
+        <img src="img\twitter.svg" alt="Twitter">
+      </a>
+      <a class="link-social" href="https://www.facebook.com/Que-tu-alma-viva-143514645719150">
+        <img src="img\facebook.svg" alt="Facebook">
+      </a>
       <p></p>    
     </footer>
   </body>
