--- a/index.html
+++ b/index.html
@@ -18,9 +18,24 @@
       <div class="container intro">
           Es un fin de semana en el que juntos reflexionamos más a fondo sobre las enfermedades espirituales como gula, lujuria, tristeza, avaricia, orgullo... y la terapéutica o remedios que señalan los Padres de la Iglesia apuntando a Cristo como el Médico. 
       </div>
+      
       <div class="container">
-          <div class="title">¿A quién va dirigido?</div>
-          <p>A todas las personas mayores de 18 años que les interese reflexionar sobre la salud interior. Han ido también adolescentes acompañados de sus padres. Los jóvenes a partir de 13 años son bienvenidos, sólo es necesario que vayan acompañados de algún familiar adulto, de preferencia sus padres.</p>
+          <div class="title">Programa</div>
+          <p>Se inicia el viernes a las 3:00pm y se termina el domingo despúes de la comida hacia las 4:00pm.</p>
+          <p>Durante el fin de semana se tienen pláticas presentando los temas, representaciones y pequeñas obras de teatro, momentos para compartir en pequeños grupos, oraciones comunes con cantos de Taizé y la eucaristía el domingo a medio día.</p>
+          <div class="title">Oración común</div>
+          <p>El viernes y sábado por la noche se hace una oración con cantos de Taizé. El viernes se reza en torno al icono de la cruz. El sábado por la noche una oración que celebra la luz de Cristo Resucitado.</p>
+      </div>
+      <!-- photo credit: https://flic.kr/p/h31Zwg -->
+      <div class="prayer-background">
+      </div>
+      <div class="container">
+            <p class="prayer">"Si para algunos, la oración en soledad es ardua, la belleza de una oración cantada en común, incluso entre dos o tres, es un incomparable apoyo de la vida interior. A través de palabras sencillas, cantos largamente repetidos, puede irradiar un gozo."</p>
+            <p class="prayer-by">fr. Roger de Taizé</p>
+        </div>
+      <div class="container">
+          <div class="title">Eucaristía y Sacramentos</div>
+          <p>Durante el fin de semana es posible para aquellos que deseen de acercarse al sacramento de la Reconciliación. También en la oración del sábado por la noche hay un momento destinado para ello.</p>          
       </div>
       <div class="background-light">
         <div class="container">
@@ -35,16 +50,10 @@
         </div>
       </div>
       <div class="container">
-          <div class="title">Programa</div>
-          <p></p>
+          <div class="title">Temas</div>
+          <p>Mucho del contenido está basado en el libro Terapéutica de las Enfermedades Espirituals del ortodoxo francés Jean-Claude Larchet</p>      
+          <img src="img\book-cover.jpg" alt="Portada del libro">    
       </div>
-      <!-- photo credit: https://flic.kr/p/h31Zwg -->
-      <div class="prayer-background">
-      </div>
-      <div class="container">
-            <p class="prayer">"Si para algunos, la oración en soledad es ardua, la belleza de una oración cantada en común, incluso entre dos o tres, es un incomparable apoyo de la vida interior. A través de palabras sencillas, cantos largamente repetidos, puede irradiar un gozo."</p>
-            <p class="prayer-by">fr. Roger de Taizé</p>
-        </div>
     </div>
     <footer class="main-footer">
       <a class="link-social" href="https://twitter.com/quetualmaviva">
