--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
           <div class="title">Programa</div>
           <p>Se inicia el viernes a las 3:00pm y se termina el domingo despúes de la comida hacia las 4:00pm.</p>
           <p>Durante el fin de semana se tienen pláticas presentando los temas, representaciones y pequeñas obras de teatro, momentos para compartir en pequeños grupos, oraciones comunes con cantos de Taizé y la eucaristía el domingo a medio día.</p>
+      </div>
+      <div class="container">
           <div class="title">Oración común</div>
           <p>El viernes y sábado por la noche se hace una oración con cantos de Taizé. El viernes se reza en torno al icono de la cruz. El sábado por la noche una oración que celebra la luz de Cristo Resucitado.</p>
       </div>
