rename to clearfix

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           Es un fin de semana en el que juntos reflexionamos más a fondo sobre las enfermedades espirituales como gula, lujuria, tristeza, avaricia, orgullo... y la terapéutica o remedios que señalan los Padres de la Iglesia apuntando a Cristo como el Médico. 
       </div>
       
-      <div class="container group">
+      <div class="container clearfix">
           
           <div class="primary col">
             <div class="title">Programa</div>
