--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <header class="main-header">
         <span> </span>
-        <h1> Terapéutica de las Enfermedades Espirituales </h1>
+        <h1 class="centered"> Terapéutica de las Enfermedades Espirituales </h1>
     </header>
     <div class="main-content">
       <div class="container intro">
@@ -34,7 +34,7 @@
       <!-- photo credit: https://flic.kr/p/h31Zwg -->
       <div class="prayer-background">
       </div>
-      <div class="container">
+      <div class="container centered">
             <p class="prayer">"Si para algunos, la oración en soledad es ardua, la belleza de una oración cantada en común, incluso entre dos o tres, es un incomparable apoyo de la vida interior. A través de palabras sencillas, cantos largamente repetidos, puede irradiar un gozo."</p>
             <p class="prayer-by">fr. Roger de Taizé</p>
         </div>
@@ -43,7 +43,7 @@
           <p>Durante el fin de semana es posible para aquellos que deseen de acercarse al sacramento de la Reconciliación. También en la oración del sábado por la noche hay un momento destinado para ello.</p>          
       </div>
       <div class="background-light">
-        <div class="container">
+        <div class="container centered">
           <div class="quote">
             <p> La Iglesia es "como un laboratorio espiritual, donde se preparan los medicamentos a fin de que encontremos con qué sanar las heridas que nos ha hecho el mundo"</p>
             <div class="author">
@@ -60,7 +60,7 @@
           <img src="img\book-cover.jpg" alt="Portada del libro">    
       </div>
     </div>
-    <footer class="main-footer">
+    <footer class="main-footer centered">
       <a class="link-social" href="https://twitter.com/quetualmaviva">
         <img src="img\twitter.svg" alt="Twitter">
       </a>
