--- a/index.html
+++ b/index.html
@@ -21,13 +21,17 @@
       <div class="container clearfix">
           
           <div class="primary col">
-            <div class="title">Programa</div>
+            <h3>Programa</h3>
             <p>Se inicia el viernes a las 3:00pm y se termina el domingo despúes de la comida hacia las 4:00pm.</p>
             <p>Durante el fin de semana se tienen pláticas presentando los temas, representaciones y pequeñas obras de teatro, momentos para compartir en pequeños grupos, oraciones comunes con cantos de Taizé y la eucaristía el domingo a medio día.</p>
+
+            <h3>Eucaristía y Sacramentos </h3>
+            <p>Durante el fin de semana es posible para aquellos que deseen de acercarse al sacramento de la Reconciliación. También en la oración del sábado por la noche hay un momento destinado para ello.</p>
+          
           </div>
 
           <div class="secondary col">
-            <div class="title">Oración común</div>
+            <h3>Oración común</h3>
             <p>El viernes y sábado por la noche se hace una oración con cantos de Taizé. El viernes se reza en torno al icono de la cruz. El sábado por la noche una oración que celebra la luz de Cristo Resucitado.</p>
           </div>
       </div>
@@ -38,10 +42,6 @@
             <p class="prayer">"Si para algunos, la oración en soledad es ardua, la belleza de una oración cantada en común, incluso entre dos o tres, es un incomparable apoyo de la vida interior. A través de palabras sencillas, cantos largamente repetidos, puede irradiar un gozo."</p>
             <p class="prayer-by">fr. Roger de Taizé</p>
         </div>
-      <div class="container">
-          <div class="title">Eucaristía y Sacramentos</div>
-          <p>Durante el fin de semana es posible para aquellos que deseen de acercarse al sacramento de la Reconciliación. También en la oración del sábado por la noche hay un momento destinado para ello.</p>          
-      </div>
       <div class="background-light">
         <div class="container centered">
           <div class="quote">
