--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
               <p>Durante el fin de semana es posible para aquellos que deseen de acercarse al sacramento de la Reconciliación. También en la oración del sábado por la noche hay un momento destinado para ello.</p>
             </div>
             <div class="secondary col">
+              
             </div>
           </div>
       </div>
@@ -62,6 +63,65 @@
           <div class="title">Temas</div>
           <p>Mucho del contenido está basado en el libro Terapéutica de las Enfermedades Espirituals del ortodoxo francés Jean-Claude Larchet</p>      
           <img src="img\book-cover.jpg" alt="Portada del libro">    
+      </div>
+      <div class="background-light clearfix">
+        <h3 class="centered">Preguntas frecuentes</h3>
+        <div class="container clearfix">
+
+          <div class="primary col">
+            <div class="faq-card ">
+              <h5 class="faq-title">¿Quién organiza?</h5>
+              <p class="faq-description">Un grupo de aproximadamente 15 personas, principalmente jóvenes, que se reúnen los viernes en la noche para hacer oración en la Parroquia de Nuestra Señora del Perpetuo Socorro, en Colima, México, bajo la dirección de nuestro párroco. </p>
+              <p class="faq-description">En el fin de semana del retiro apoyan también sacerdotes de la Diócesis de Colima.</p>
+            </div>
+            <div class="faq-card ">
+              <h5 class="faq-title">¿Cuánto dura el retiro?</h5>
+              <p class="faq-description">Se inicia el viernes a las 4 PM y se termina el domingo a las 5 PM.</p>
+            </div>
+            <div class="faq-card ">
+              <h5 class="faq-title">¿Cuál es el costo?</h5>
+              <p class="faq-description">La contribución personal es de 500 a 700 pesos. A partir de 500 usted ayuda a que asistan personas con menos recursos económicos.</p>
+              <p class="faq-description">Con esto se cubre hospedaje por persona en habitación doble (2 camas individuales) con baño, los alimentos de la cena del viernes a la comida del domingo.</p>
+            </div>
+            <div class="faq-card ">
+              <h5 class="faq-title">¿Tendré que hablar en público?</h5>
+              <p class="faq-description">No. </p>
+            </div>
+            <div class="faq-card ">
+              <h5 class="faq-title">¿A quién va dirigido?</h5>
+              <p class="faq-description">Para todas las personas mayores de 18 años que les interese reflexionar sobre la salud interior. Han ido también adolescentes acompañados de sus padres. Los jóvenes a partir de 13 años son bienvenidos, sólo es necesario que vayan acompañados de algún familiar adulto, de preferencia sus padres.</p>
+            </div>
+          </div>
+
+          <div class="secondary col">
+            <div class="faq-card ">
+              <h5 class="faq-title">¿Qué debo llevar?</h5>
+              <ul class="faq-description">
+                <li>Sábana</li>
+                <li>Funda de almohada</li>
+                <li>Toalla</li>
+                <li>Artículos de higiene personal (jabón, shampoo)</li>
+                <li>Un abrigo ligero (en las noches puede hacer frío)</li>
+              </ul>
+              <p class="faq-description">En los cuartos hay dos camas individuales con almohada y cobija.</p>
+            </div>
+            <div class="faq-card ">
+              <h5 class="faq-title">¿Qué buscamos?</h5>
+              <p class="faq-description">Una oportunidad para:</p>
+              <ul class="faq-description">
+                <li>Salir del aislamiento</li>
+                <li>Despertar al misterio de Dios</li>
+                <li>Solidarizarse con el sufrimiento humano</li>
+                <li>Celebrar las fuentes de la fe</li>
+              </ul>
+            </div>
+            <div class="faq-card ">
+              <h5 class="faq-title">¿Qué <u>no</u> buscamos?</h5>
+              <p class="faq-description">No queremos dirigir a nadie a una iniciativa particular de la Iglesia. Nadie se hace miembro en ningún sentido. Al final del retiro se hace la invitación a los participantes a que busquen a su párroco y encuentren con él un lugar en su Parroquia para “sanar las heridas que nos ha hecho el mundo” y para ser fermento de comunión.</p>
+            </div>
+          </div>
+
+        </div>
       </div>
     </div>
     <footer class="main-footer centered">
