add faq question

--- a/index.html
+++ b/index.html
@@ -95,6 +95,10 @@
 
           <div class="secondary col">
             <div class="faq-card ">
+              <h5 class="faq-title">¿Dónde es?</h5>
+              <p class="faq-description">En la Casa de Espiritualidad de San José, en Suchitlán, Colima, México.</p>
+            </div>
+            <div class="faq-card ">
               <h5 class="faq-title">¿Qué debo llevar?</h5>
               <ul class="faq-description">
                 <li>Sábana</li>
