change intro text

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <div class="subheader centered">egoísmo &middot resentimiento &middot cólera &middot depresión &middot orgullo &middot miedo &middot rencor &middot lujuria &middot avaricia &middot odio &middot tristeza &middot ansiedad</div>
     </header>
     <div class="main-content">
-      <div class="container intro">
-          Es un fin de semana en el que juntos reflexionamos más a fondo sobre las enfermedades espirituales como gula, lujuria, tristeza, avaricia, orgullo... y la terapéutica o remedios que señalan los Padres de la Iglesia apuntando a Cristo como el Médico. 
+      <div class="container intro centered">
+          Es un fin de semana en el que juntos reflexionamos más a fondo sobre las enfermedades espirituales y la terapéutica o remedios que señalan los Padres de la Iglesia apuntando a Cristo como el Médico. 
       </div>
       
       <div class="container clearfix">
