--- a/index.html
+++ b/index.html
@@ -21,23 +21,20 @@
       
       <div class="container clearfix">
           <div class ="clearfix">
-            <div class="primary col">
-              <h3>Programa</h3>
-              <p>Se inicia el viernes a las 3:00pm y se termina el domingo despúes de la comida hacia las 4:00pm.</p>
-              <p>Durante el fin de semana se tienen pláticas presentando los temas, representaciones y pequeñas obras de teatro, momentos para compartir en pequeños grupos, oraciones comunes con cantos de Taizé y la eucaristía el domingo a medio día.</p>
+            <div class="primary-30 col">
+              <h3>Pláticas</h3>
+              <img class="feat-image" src="img\platica.jpg"> 
+              <p>Durante el fin de semana se tienen pláticas presentando los temas, representaciones, pequeñas obras de teatro y momentos para compartir en pequeños grupos.</p>
             </div>
-            <div class="secondary col">
+            <div class="secondary-30 col">
               <h3>Oración común</h3>
+              <img class="feat-image" src="img\oracion.jpg"> 
               <p>El viernes y sábado por la noche se hace una oración con cantos de Taizé. El viernes se reza en torno al icono de la cruz. El sábado por la noche una oración que celebra la luz de Cristo Resucitado.</p>
             </div>
-          </div>
-          <div>
-            <div class="primary col">
+            <div class="tertiary-30 col">
               <h3>Eucaristía y Sacramentos </h3>
-              <p>Durante el fin de semana es posible para aquellos que deseen de acercarse al sacramento de la Reconciliación. También en la oración del sábado por la noche hay un momento destinado para ello.</p>
-            </div>
-            <div class="secondary col">
-              
+              <img class="feat-image" src="img\eucaristia.jpg"> 
+              <p>Es posible para aquellos que deseen de acercarse al sacramento de la Reconciliación. El domingo se celebra la Eucaristía.</p>
             </div>
           </div>
       </div>
