bottom photo background

--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
 
         </div>
       </div>
+      <div class="group-photo-background"> </div>
     </div>
     <footer class="main-footer centered">
       <a class="link-social" href="https://twitter.com/quetualmaviva">
