make .intro font-size responsive

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </header>
     <div class="main-content">
       <div class="container intro centered">
-          Es un fin de semana en el que juntos reflexionamos más a fondo sobre las enfermedades espirituales y la terapéutica o remedios que señalan los Padres de la Iglesia apuntando a Cristo como el Médico. 
+          En un fin de semana juntos reflexionamos más a fondo sobre las enfermedades espirituales y la terapéutica o remedios que señalan los Padres de la Iglesia apuntando a Cristo como el Médico. 
       </div>
       
       <div class="container clearfix">
