--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <div class="quote">
             <p> La Iglesia es "como un laboratorio espiritual, donde se preparan los medicamentos a fin de que encontremos con qué sanar las heridas que nos ha hecho el mundo"</p>
             <div class="author">
-              <img src="img\juan-crisostomo.jpg" alt="Juan Crisóstomo">
+              <img src="img\juan-crisostomo.jpg" alt="Juan Crisóstomo" class="circle">
               <p>San Juan Crisóstomo</p>
               <p class="more-info">siglo IV, Obispo de Constantinopla</p>
             </div>  
