adjust book note

--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
       </div>
       <div class="container clearfix">
           <h2 class="centered">Temas</h2>
-          <p class="centered">Mucho del contenido está basado en el libro "Terapéutica de las Enfermedades Espirituales" del ortodoxo francés Jean-Claude Larchet</p>      
           <div class="book-cover">
           <img src="img\book-cover.jpg" alt="Portada del libro" >
+          <p class="centered">Basado en el libro "Terapéutica de las Enfermedades Espirituales" del ortodoxo francés Jean-Claude Larchet.</p>
           </div>  
           <div class="program">  
             <ul>
@@ -102,6 +102,7 @@
               <li>Salud reencontrada: la impasibilidad, la caridad y el conocimiento de Dios</li>
             </ul>
           </div>
+                
       </div>
       <div class="background-light clearfix">
         <div class="container clearfix">
