add italic font-style

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <h2 class="centered">Temas</h2>
           <div class="book-cover">
           <img src="img\book-cover.jpg" alt="Portada del libro" >
-          <p class="centered">Basado en el libro "Terapéutica de las Enfermedades Espirituales" del ortodoxo francés Jean-Claude Larchet.</p>
+          <p class="centered italic">Basado en el libro "Terapéutica de las Enfermedades Espirituales" del ortodoxo francés Jean-Claude Larchet.</p>
           </div>  
           <div class="program">  
             <ul>
