--- a/index.html
+++ b/index.html
@@ -11,11 +11,14 @@
 </head>
 
 <body>
-	<header class="main-header">
+	<header class="main-header clearfix">
 		<span> </span>
 		<h1 class="centered text-bold">Terapéutica de las Enfermedades Espirituales</h1>
-		<div class="subheader centered">egoísmo &middot resentimiento &middot cólera &middot depresión &middot orgullo &middot miedo &middot rencor &middot lujuria
-			&middot avaricia &middot odio &middot tristeza &middot ansiedad</div>
+		<div class="subheader centered">
+			<div class="container">egoísmo &middot resentimiento &middot cólera &middot depresión &middot orgullo &middot miedo &middot rencor &middot lujuria
+				&middot avaricia &middot odio &middot tristeza &middot ansiedad
+			</div>
+		</div>
 	</header>
 	<div class="main-content">
 		<div class="container intro centered">
@@ -130,7 +133,8 @@
 					<div class="faq-card ">
 						<h3 class="faq-title">¿Cuál es el costo?</h3>
 						<p class="faq-description">La contribución personal es de 500 a 700 pesos. A partir de 500 usted ayuda a que asistan personas con menos recursos
-							económicos.</p>
+							económicos.
+						</p>
 						<p class="faq-description">Con esto se cubre hospedaje por persona en habitación doble (2 camas individuales) con baño, los alimentos de la cena
 							del viernes a la comida del domingo.</p>
 					</div>
