add welcome section

--- a/index.html
+++ b/index.html
@@ -47,6 +47,21 @@
 				</div>
 			</div>
 		</div>
+		<div class="container clearfix">
+			<div class="welcome">
+				<div class="welcome-quote">
+					<p class="text-bold">"Que el Señor bendiga estos trabajos y nos ayude a responder a la misión que la Iglesia nos ha confiado.</p>
+					<p class="text-bold">¡Bienvenidos!"</p>
+					<div class="welcome-quote-by">
+						<p class="text-bold no-margin-bottom">Pbro. Eduardo Vázquez Tiscareño</p>
+						<p class="text-semibold no-margin-top no-margin-bottom">Párroco, Diócesis de Colima</p>
+					</div>
+				</div>
+				<div class="welcome-img">
+					<img src="img\padrelalo.png">
+				</div>
+			</div>
+		</div>
 		<!-- photo credit: https://flic.kr/p/h31Zwg -->
 		<div class="prayer-background">
 		</div>
@@ -125,7 +140,7 @@
 							<h3 class="faq-title">¿Quién organiza?</h3>
 							<p class="faq-description">Un grupo de aproximadamente 15 personas, principalmente jóvenes, que se reúnen los viernes en la noche para hacer
 								oración en la Parroquia de Nuestra Señora del Perpetuo Socorro, en Colima, México, bajo la dirección de nuestro párroco.
-								</p>
+							</p>
 							<p class="faq-description">En el fin de semana del retiro apoyan también sacerdotes de la Diócesis de Colima.</p>
 						</div>
 						<div class="faq-card ">
