--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
 		</div>
 	</header>
 	<div class="main-content">
+		<h2 class="centered">La Diócesis de Colima invita:</h2>
 		<div class="container intro centered">
-			En un fin de semana juntos reflexionamos más a fondo sobre las enfermedades espirituales y la terapéutica o remedios que
-			señalan los Padres de la Iglesia apuntando a Cristo como el Médico.
+			A un fin de semana donde juntos reflexionamos más a fondo sobre las enfermedades espirituales y la terapéutica o remedios
+			que señalan los Padres de la Iglesia apuntando a Cristo como el Médico.
 		</div>
 
 		<div class="container clearfix">
