add h1-light style

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
 	<header class="main-header clearfix">
 		<span> </span>
+		<h1 class="centered text-semibold h1-light">Retiro</h1>
 		<h1 class="centered text-bold">Terapéutica de las Enfermedades Espirituales</h1>
 		<div class="subheader centered">
 			<div class="container">egoísmo &middot resentimiento &middot cólera &middot depresión &middot orgullo &middot miedo &middot rencor &middot lujuria
