add bishop section

--- a/index.html
+++ b/index.html
@@ -133,6 +133,20 @@
 			</div>
 
 		</div>
+		<div class="container clearfix">
+			<div class="welcome">
+				<div class="welcome-quote bishop">
+					<p class="text-bold">"Estoy en comunión con ustedes y encomiendo a Dios sus actividades"</p>
+					<div class="welcome-quote-by">
+						<p class="text-bold no-margin-bottom">Mons. José Luis Amezcua Melgoza</p>
+						<p class="text-semibold no-margin-top no-margin-bottom">X Obispo, Diócesis de Colima</p>
+					</div>
+				</div>
+				<div class="welcome-img">
+					<img src="img\mons_jose.jpg">
+				</div>
+			</div>
+		</div>
 		<div class="background-light clearfix">
 			<div class="container clearfix">
 				<h2 class="centered">Preguntas frecuentes</h2>
