--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		</div>
 	</header>
 	<div class="main-content">
-		<h2 class="centered invitation">La Diócesis de Colima invita</h2>
+		<h2 class="centered invitation">La Parroquia de Nuestra Señora de la Merced invita</h2>
 		<div class="container intro centered">
 			A un fin de semana donde juntos reflexionamos más a fondo sobre las enfermedades espirituales y la terapéutica o remedios
 			que señalan los Padres de la Iglesia apuntando a Cristo como el Médico.
