fix cover picture

--- a/index.html
+++ b/index.html
@@ -7,15 +7,18 @@
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Lato:300" rel="stylesheet">
 	<meta name="viewport" content="width=device-width">
 </head>
 
 <body>
 	<header class="main-header clearfix">
 		<span> </span>
-		<h1 class="centered text-semibold h1-light">Retiro</h1>
-		<h1 class="centered text-bold">Terapéutica de las Enfermedades Espirituales</h1>
-		<div class="subheader centered">
+
+		<h1 class="centered">Terapéutica de las Enfermedades Espirituales</h1>
+		<h4 class="centered">8-10 Septiembre 2017</h4>
+		<h4 class="centered">Suchitlán, Colima</h4>
+		<div class="subheader centered" style="display:none">
 			<div class="container">egoísmo &middot resentimiento &middot cólera &middot depresión &middot orgullo &middot miedo &middot rencor &middot lujuria
 				&middot avaricia &middot odio &middot tristeza &middot ansiedad
 			</div>
