--- a/index.html
+++ b/index.html
@@ -18,11 +18,6 @@
 		<h1 class="centered">Terapéutica de las Enfermedades Espirituales</h1>
 		<h4 class="centered">8-10 Septiembre 2017</h4>
 		<h4 class="centered">Suchitlán, Colima</h4>
-		<div class="subheader centered" style="display:none">
-			<div class="container">egoísmo &middot resentimiento &middot cólera &middot depresión &middot orgullo &middot miedo &middot rencor &middot lujuria
-				&middot avaricia &middot odio &middot tristeza &middot ansiedad
-			</div>
-		</div>
 	</header>
 	<div class="main-content">
 		<h2 class="centered invitation">La Parroquia de N.S. del Perpetuo Socorro invita</h2>
@@ -30,7 +25,11 @@
 			A un fin de semana donde juntos reflexionamos más a fondo sobre las enfermedades espirituales y la terapéutica o remedios
 			que señalan los Padres de la Iglesia apuntando a Cristo como el Médico.
 		</div>
-
+		<div class="subheader centered">
+			<div class="container">egoísmo &middot resentimiento &middot cólera &middot depresión &middot orgullo &middot miedo &middot rencor &middot lujuria
+				&middot avaricia &middot odio &middot tristeza &middot ansiedad
+			</div>
+		</div>
 		<div class="container clearfix">
 			<div class="clearfix">
 				<div class="primary-30 col">
