update picture and cleanup

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 </head>
 
 <body>
-	<header class="main-header clearfix">
+	<header class="main-header clearfix centered">
 		<span> </span>
+		<h1>Terapéutica de las Enfermedades Espirituales</h1>
+		<h4>8-10 Septiembre 2017</h4>
+		<h4>Suchitlán, Colima</h4>
 
-		<h1 class="centered">Terapéutica de las Enfermedades Espirituales</h1>
-		<h4 class="centered">8-10 Septiembre 2017</h4>
-		<h4 class="centered">Suchitlán, Colima</h4>
 	</header>
 	<div class="main-content">
 		<h2 class="centered invitation">La Parroquia de N.S. del Perpetuo Socorro invita</h2>
@@ -66,7 +66,6 @@
 				</div>
 			</div>
 		</div>
-		<!-- photo credit: https://flic.kr/p/h31Zwg -->
 		<div class="prayer-background">
 		</div>
 		<div class="container centered">
@@ -89,7 +88,7 @@
 			</div>
 		</div>
 		<div class="container clearfix">
-			<h2 class="centered">Temas</h2>
+			<h2 class="centered">Contenido</h2>
 			<div class="book-cover">
 				<img src="img\book-cover.jpg" alt="Portada del libro">
 				<p class="centered italic">Basado en el libro "Terapéutica de las Enfermedades Espirituales" del ortodoxo francés Jean-Claude Larchet.</p>
@@ -163,7 +162,7 @@
 						</div>
 						<div class="faq-card ">
 							<h3 class="faq-title">¿Cuánto dura el retiro?</h3>
-							<p class="faq-description">Se inicia el viernes a las 4 PM y se termina el domingo a las 5 PM.</p>
+							<p class="faq-description">Se inicia el viernes a las 4 PM y se termina el domingo a las 4 PM.</p>
 						</div>
 						<div class="faq-card ">
 							<h3 class="faq-title">¿Cuál es el costo?</h3>
